--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -74,7 +74,7 @@ Create a file named zecke.conf and paste this into it to get the latest unoffici
 (Restart your phone)
 
 ==== Advanced power management ====
-If you decide not to install the Unnofficial Zecke updates you should install "illume-config" to can gain access to more advanced power management features and to change the look of the GUI through the wrench that will now appear in the top bar. (Restart your phone)
+If you decide not to install the Unofficial Zecke updates you should install "illume-config" to can gain access to more advanced power management features and to change the look of the GUI through the wrench that will now appear in the top bar. (Restart your phone)
 
 ==== Mediaplayer ====
 
