*Empty MediaWiki Message*

--- a/Gestures.mw
+++ b/Gestures.mw
@@ -1,4 +1,5 @@
 {{Application|Gestures}}
+[[Image:Accelges-Recognize-1.png|thumb]]
 
 =Alpha 2 Release (14 Aug 2008) for Neo Freerunner=
 
@@ -34,13 +35,13 @@ Select a gesture, press Train, and follow instructions.
 ==Alpha 2 Release Details==
 
 ===Prerequisites===
-* You can use any distribution you like; I would suggest using the 2008.8 for now. You'll need these dependencies:
+* You can use any distribution you like; I would suggest using the [[Om 2008.8]] for now. You'll need these dependencies:
  dbus, dbus-glib, libxrandr, libnotify, notification-daemon, libcurl, and gtk+
-* On the 2008.8, you'll be missing:
+* On the [[Om 2008.8]], you'll be missing:
  libnotify, notification-daemon, libsexy2, libwnck-1-18, libstartup-notification-1-0, and libglade-2
 ''Remark: On the 2008.8, your missing dependencies will be downloaded automatically by the installer.''
 
-===Preparing 2008.8 for Gestures===
+===Preparing Om 2008.8 for Gestures===
 * Turn off Suspend:
   Home > Settings > Suspend > off
 * Make sure Neo has Web Access (use SSH):
@@ -63,12 +64,12 @@ Select a gesture, press Train, and follow instructions.
 * Launch the Gesture Manager:
  Home > Gestures
 * Select a gesture and click the first icon on the toolbar; Follow the instructions. Do the same for all the gestures!
-** Step 1: Launch Gesture Manager <br />[[Image:Accelges-Train-1.png]]
-** Step 2: This is the Gesture Manager <br />[[Image:Accelges-Train-2.png]]
-** Step 3: Select a gesture, and click Train (first icon from the toolbar) <br />[[Image:Accelges-Train-3.png]]
-** Step 4: Make the gesture (this step creates the gesture) <br />[[Image:Accelges-Train-4.png]]
-** Step 5: Make the gesture again (this step trains the gesture) <br />[[Image:Accelges-Train-5.png]]
-** Step 6: Select another gesture, and do the same <br />[[Image:Accelges-Train-6.png]]
+** Step 1: Launch Gesture Manager <br />[[Image:Accelges-Train-1.png|200px]]
+** Step 2: This is the Gesture Manager <br />[[Image:Accelges-Train-2.png|200px]]
+** Step 3: Select a gesture, and click Train (first icon from the toolbar) <br />[[Image:Accelges-Train-3.png|200px]]
+** Step 4: Make the gesture (this step creates the gesture) <br />[[Image:Accelges-Train-4.png|200px]]
+** Step 5: Make the gesture again (this step trains the gesture) <br />[[Image:Accelges-Train-5.png|200px]]
+** Step 6: Select another gesture, and do the same <br />[[Image:Accelges-Train-6.png|200px]]
 
 * Restart the Gesture Recognizer (use SSH):
  /etc/init.d/gesd-neo2 restart
@@ -79,18 +80,18 @@ Select a gesture, press Train, and follow instructions.
 * Use the script you have created before; '''be sure to run the script from the Neo, no SSH or VNC''':
  gesl-begin
 * There are 12 gestures available (once, you make one, a notification will pop up):
-*# Shake-shake gesture: <br />[[Image:Accelges-Recognize-1.png]]
-*# Forward-backward gesture: <br />[[Image:Accelges-Recognize-2.png]]
-*# Horizontal-circle gesture: <br />[[Image:Accelges-Recognize-3.png]]
-*# Z gesture: <br />[[Image:Accelges-Recognize-4.png]]
-*# Right gesture: <br />[[Image:Accelges-Recognize-5.png]]
-*# Left gesture: <br />[[Image:Accelges-Recognize-6.png]]
-*# Up gesture: <br />[[Image:Accelges-Recognize-7.png]]
-*# Down gesture: <br />[[Image:Accelges-Recognize-8.png]]
-*# Right-left gesture: <br />[[Image:Accelges-Recognize-9.png]]
-*# Left-right gesture: <br />[[Image:Accelges-Recognize-10.png]]
-*# Up-down gesture: <br />[[Image:Accelges-Recognize-11.png]]
-*# Down-up gesture: <br />[[Image:Accelges-Recognize-12.png]]
+*# Shake-shake gesture: <br />[[Image:Accelges-Recognize-1.png|100px]]
+*# Forward-backward gesture: <br />[[Image:Accelges-Recognize-2.png|100px]]
+*# Horizontal-circle gesture: <br />[[Image:Accelges-Recognize-3.png|100px]]
+*# Z gesture: <br />[[Image:Accelges-Recognize-4.png|100px]]
+*# Right gesture: <br />[[Image:Accelges-Recognize-5.png|100px]]
+*# Left gesture: <br />[[Image:Accelges-Recognize-6.png|100px]]
+*# Up gesture: <br />[[Image:Accelges-Recognize-7.png|100px]]
+*# Down gesture: <br />[[Image:Accelges-Recognize-8.png|100px]]
+*# Right-left gesture: <br />[[Image:Accelges-Recognize-9.png|100px]]
+*# Left-right gesture: <br />[[Image:Accelges-Recognize-10.png|100px]]
+*# Up-down gesture: <br />[[Image:Accelges-Recognize-11.png|100px]]
+*# Down-up gesture: <br />[[Image:Accelges-Recognize-12.png|100px]]
 ''Remark: If you don't start the Gesture Listener from the Neo, screen orientation won't work''
 
 ===How To Improve Recognition Accuracy===
@@ -104,7 +105,7 @@ Gesture Recognizer (gesd) sends signals on:
  /org/openmoko/accelges/Recognizer
  org.openmoko.accelges.Recognizer.Recognized
 
-Try (on FSO distribution)
+Try (on [[FSO]] distribution)
  mdbus -s -l
 and make a gesture for more information on DBUS.
 
