--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -19,6 +19,9 @@ Minimo is a Mozilla based web browser. It features full AJAX support and other g
 {{main|GPS applications}}
 
 === Other ===
+'''[[Gestures]]<br>
+Gestures is a daemon that interpret the accelerometers and the movements you make with your FreeRunner. It's also switch between portrait/landscape if it notice your FreeRunner is moved sideways.
+
 '''[[Mokopedia]]'''<br>
 Special compressed version of Wikipedia stored in your SD storage card.   Access to wikipedia wherever you are!
 
