--- a/Keyboard_Toggle.mw
+++ b/Keyboard_Toggle.mw
@@ -16,7 +16,7 @@ Simply install the illume-config theme:
 
  opkg install illume-config
 
-This is not recommended as it is not possible to change the keyboard to full-qwerty anymore with method mentioned in [http://wiki.openmoko.org/wiki/Om2008.8_Keyboard Om2008.8 Keyboard]. Also illume-config doesn't seem to work very well with zecke's upgrades.
+This is not recommended as it would not be possible to change the keyboard to full-qwerty anymore with the method mentioned in [http://wiki.openmoko.org/wiki/Om2008.8_Keyboard Om2008.8 Keyboard]. Also illume-config doesn't seem to work very well with zecke's upgrades.
 
 ==== Method 2 ====
 Install the tools required to decompile and recompile E17 theme code.
