--- a/Rotate.mw
+++ b/Rotate.mw
@@ -1,8 +1,10 @@
+{{Application|Rotate}}
+
 Here's a quick and simple C program that reads a packet from the
 accelerometer once per second, and rotates the screen to a new
 orientation if the orientation has changed.           
 
-I don't mean this to conflict with Paul's excellent work on Gestures;
+I don't mean this to conflict with Paul's excellent work on [[Gestures]];
 my reason for writing it is so that it can be used as an always-on
 daemon in the OM distributions.  (Full gesture interpretation is more
 CPU heavy and requires reading data more often than once per second,
