--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -34,6 +34,8 @@ This is software that mostly hasn't any GUI. This software is usually used by ot
 '''[[Thumbtribes]]'''<br>
 Low bandwidth distance calculation daemon
 
+'''[[Rotate]]'''<br>
+This program just rotates the screen according to the position of the Neo FreeRunner. It's just on c file, but it works very well. 
 
 [[Category:Applications]]
 [[Category:Openmoko]]
