/* Dynamic Screen Orientation */

--- a/Wishlist%2FDynamic_Screen_Orientation.mw
+++ b/Wishlist%2FDynamic_Screen_Orientation.mw
@@ -5,4 +5,13 @@ Using an [[accelerometer]] to sense which direction is down, the interface could
 
 This orientation should also be used when capturing images or videos in either landscape or portrait mode. This eliminated the need for tedious rotation correction for captures images and movies. For images this orientation should also be stored in EXIF tags.
 
+== Applications ==
+There are already some [[applications]] that gives this ability to the [[Neo FreeRunner]]
+
+[[Gestures]]
+Gestures is a daemon that interpret the accelerometers and the movements you make with your FreeRunner. It's also switch between portrait/landscape if it notice your FreeRunner is moved sideways. 
+
+[[Rotate]]
+This program just rotates the screen according to the position of the Neo FreeRunner. It's just on c file, but it works very well. 
+
 [[Category:Accelerometer]]
