--- a/GSM_network_registration.mw
+++ b/GSM_network_registration.mw
@@ -91,8 +91,9 @@ We'd like to know the real network registration status by our NEO devices in the
 | [[User:robolange | Robert Lange]]   || Philadelphia, PA, USA || AT&T || obtained with AT&T prepaid phone in July 2008; model 71234 O 4022 || GTA02Bv5 || Moko8 || Yes || with probability about 0.2, will register immediately upon boot, otherwise you have to reboot and try your luck again; seems to be location independent || File not found
 |-
 | KB || Denmark || TDC || From TDC business in 2007 (64K43) didn't work, got new card for free (64K23) and that worked! || GTA02Bv5 || Moko8 || ¿What? || Works with new card || File not found
-|}
-
+|-
+| clare johnstone||Perth, Australia ||Vodafone AU || Prepaid 10 days||GTA02bv5 ||Moko8||YES ||no service briefly 2 min intervals for  10 hours today||MDBUS listing
+|-
 
 == See also ==
 * [[FreeRunner unable to work with 3G SIM cards]]
