--- a/Wishlist%2FDynamic_Screen_Orientation.mw
+++ b/Wishlist%2FDynamic_Screen_Orientation.mw
@@ -8,10 +8,10 @@ This orientation should also be used when capturing images or videos in either l
 == Applications ==
 There are already some [[applications]] that gives this ability to the [[Neo FreeRunner]]
 
-[[Gestures]]
+[[Gestures]]<br>
 Gestures is a daemon that interpret the accelerometers and the movements you make with your FreeRunner. It's also switch between portrait/landscape if it notice your FreeRunner is moved sideways. 
 
-[[Rotate]]
+[[Rotate]]<br>
 This program just rotates the screen according to the position of the Neo FreeRunner. It's just on c file, but it works very well. 
 
 [[Category:Accelerometer]]
