/* Reactivating the keyboard toggle under Om2008.8 */

--- a/Keyboard_Toggle.mw
+++ b/Keyboard_Toggle.mw
@@ -5,7 +5,7 @@ See [[Om2008.8 Keyboard]] for details of the OM 2008.8 keyboard's usage.
 == Alternatives ==
 Alternatively, you can try connecting a [[Manually_using_Bluetooth#Being_able_to_use_HID_devices|bluetooth keyboard]] or USB keyboard (Only available with a special cable, or an extra special cable in the case of the older unpowered USB units.)
 
-== Reactivating the keyboard toggle under [[Om2008.8]] ==
+== Reactivating the keyboard toggle under Om2008.8 ==
 For advanced users using the [[Om2008.8]] [[Distributions|distribution]], it may be worth your while to change the E17 theme information which prevents the 'qwerty' link in the upper left from showing.
 
 === On the phone ===
