--- a/Keyboard_Toggle.mw
+++ b/Keyboard_Toggle.mw
@@ -1,12 +1,12 @@
 The [[Om 2008.8]] and [[Om 2007.2]] Openmoko [[distributions]] have been designed to bring up an on-screen keyboard which supplies keystroke information to applications.  However, this requires the cooperation of the application, which is a problem for software designed with another X11 based phone stack in mind, or software which has been quickly ported from Linux desktop systems, because it will never bring up a keyboard for (possibly important) keystroke information.  It is also possible that the keyboard could be brought or remain up by accident when you don't want it there, or even software specifically designed with this functionality in mind may occasionally fail or become confused when an on screen keyboard is supposed to be available.
 
-See [[Om2008.8 Keyboard]] for details of the OM 2008.8 keyboard's usage.
+See [[Om2008.8 Keyboard]] for details of the Om 2008.8 keyboard's usage.
 
 == Alternatives ==
 Alternatively, you can try connecting a [[Manually_using_Bluetooth#Being_able_to_use_HID_devices|bluetooth keyboard]] or USB keyboard (Only available with a special cable, or an extra special cable in the case of the older unpowered USB units.)
 
-== Reactivating the keyboard toggle under Om2008.8 ==
-For advanced users using the [[Om2008.8]] [[Distributions|distribution]], it may be worth your while to change the E17 theme information which prevents the 'qwerty' link in the upper left from showing.
+== Reactivating the keyboard toggle under Om 2008.8 ==
+For advanced users using the [[Om 2008.8]] [[Distributions|distribution]], it may be worth your while to change the E17 theme information which prevents the 'qwerty' link in the upper left from showing.
 
 === On the phone ===
 
@@ -16,7 +16,7 @@ Simply install the illume-config theme:
 
  opkg install illume-config
 
-This is not recommended as it would not be possible to change the keyboard to full-qwerty anymore with the method mentioned in [http://wiki.openmoko.org/wiki/Om2008.8_Keyboard Om2008.8 Keyboard]. Also illume-config doesn't seem to work very well with zecke's upgrades.
+This is not recommended as it would not be possible to change the keyboard to full-qwerty anymore with the method mentioned in [http://wiki.openmoko.org/wiki/Om2008.8_Keyboard Om 2008.8 Keyboard]. Also illume-config doesn't seem to work very well with zecke's upgrades.
 
 ==== Method 2 ====
 Install the tools required to decompile and recompile E17 theme code.
@@ -44,7 +44,7 @@ And finally restart X to take new theme in use
  /etc/init.d/xserver-nodm restart
 
 === Building a custom package ===
-If that doesn't work, follow the instructions on [[Mokomakefile|building Om2008.8 from source]].  Unpack the source for the package 'illume-theme', edit its edc file using the same method described above, and then finish building the ipk.  You should be able to install this ipk, overiding the previous configuration.
+If that doesn't work, follow the instructions on [[Mokomakefile|building Om 2008.8 from source]].  Unpack the source for the package 'illume-theme', edit its edc file using the same method described above, and then finish building the ipk.  You should be able to install this ipk, overiding the previous configuration.
 
 === Upgrading ===
 If you upgrade, such as with opkg upgrade, you may have to perform the modification again.
