--- a/Accessories.mw
+++ b/Accessories.mw
@@ -4,6 +4,7 @@ This is a list of some accessories for [[Neo 1973]] and [[Neo FreeRunner]].
 *[[Stylus Alternatives]]
 *[[Car phone holder]]
 *[[External GPS antennas]]
+*[[External GSM Antenna]]
 *[[Manually using Bluetooth#Being able to use HID devices|Bluetooth keyboards]]
 **[[FrogPad]]
 *[[InvisibleShield]]
