*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_Dortmund.mw
+++ b/Openmoko_Local_Groups:_Dortmund.mw
@@ -10,10 +10,10 @@
 |-
 |[[User:Ugh|ugh]]
 |Software Developer
-|I just ordered the Freerunner, want to use/develop GPS software on it.
+|Got my Freerunner. Checking it out, getting started.
 |Dortmund
 |/*no comment*/
-|
+|[[Image: Moko.jpg|center]]
 |
 |-
 |[[User:tobyS|TobyS]]
