--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -105,7 +105,7 @@ Would RINEX be an appropriate general format for internal storage? No.
 It's an exchange format but it's intended to include data required to perform post-processing.
 It stores direct satellite observations, not things needed for navigation like calculated position.
 
-This guy wrote a program that takes Ublox Antares 4 data and writes it as RINEX data.
+This guy wrote a program that takes u-blox Antaris 4 data and writes it as RINEX data.
 http://home.comcast.net/~dmilbert/softs/ant2rin.htm
 
 GPX would accommodate everything we need but it's ASCII XML and that means 1/2 the file is just XML formatting. It might be possible to used tokenized GPX to make it more compact.
