/* Data format and exchange */

--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -99,6 +99,12 @@ The data should be stored internally in a compact form that is open or at least 
 
 There should be a desktop tool to manage transferring the data that has been collected from the smartphone to more portable exchange formats such as GPX and GML and KML. "GPS Office"
 
+=== Native u-blox format ===
+
+One suggestion is to simply store and process the data in the u-blox binary format.
+This might be a starting point but leaves out the possibility of the software interoperating
+with other receivers or even running on the Neo 1973.
+
 === RINEX ===
 
 Would RINEX be an appropriate general format for internal storage? No.
