--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -134,6 +134,8 @@ gypsy http://folks.o-hand.com/iain/gypsy/ GPS data multiplexer
 
 RINEX specs ftp://ftp.unibe.ch/aiub/rinex/
 
+u-blox Antaris product page http://www.u-blox.com/products/a4products.html
+
 === Commercial software ===
 
 ESRI ArcPad http://www.tdsway.com/products/solo_field
