added info about mickeyterm for FSO.

--- a/Finding_hardware_revision.mw
+++ b/Finding_hardware_revision.mw
@@ -13,4 +13,6 @@ revision: "HW: GTA02BV5, GSM:
 gsm_ac_gp_fd_pu_em_cph_ds_vc_cal35_ri_36_amd8_ts0-Moko8"
 </pre>
 
+If your are running [[FSO]], you can use [[OpenmokoFramework/mickeyterm|mickeyterm]] and the '''at+cgmr''' command.
+
 [[Category:Hardware]]
