*Empty MediaWiki Message*

--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -1,6 +1,8 @@
+[[Image:Remoko_menu.jpg|thumb]]
+
 ==About==
 
-* Openmoko remote controller is a SoC 08 project, that aims to write a application that can make Openmoko-powered devices appear to be a mixed Bluetooth keyboard-and-mouse device.
+* Openmoko remote controller is a [[Google Summer of Code 2008]] project, that aims to write a application that can make Openmoko-powered devices appear to be a mixed Bluetooth keyboard-and-mouse device.
 *'''Student:''' [http://www.valeriovalerio.org Valério Valério]
 *'''Mentor:''' Daniel Willmann
 
