--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -2,7 +2,7 @@
 
 ==About==
 
-* Openmoko remote controller is a [[Google Summer of Code 2008]] project, that aims to write a application that can make Openmoko-powered devices appear to be a mixed Bluetooth keyboard-and-mouse device.
+* Openmoko remote controller is a [[Summer of Code 2008]] project, that aims to write a application that can make Openmoko-powered devices appear to be a mixed Bluetooth keyboard-and-mouse device.
 *'''Student:''' [http://www.valeriovalerio.org Valério Valério]
 *'''Mentor:''' Daniel Willmann
 
