--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -15,6 +15,10 @@ Any problems with the software below should be reported to the individual softwa
 '''[[Minimo]]'''<br>
 Minimo is a Mozilla based web browser. It features full AJAX support and other goodies. It is listed as an alternative to standard Webkit based browser. 
 
+=== Bluetooth ===
+'''[[ReMoko]]'''<br>
+This applications connects through bluetooth and turns your FreeRunner into a Presentation remote control, a Multimedia remote control, a mouse for another computer and many more.
+
 === GPS ===
 {{main|GPS applications}}
 
