*Empty MediaWiki Message*

--- a/Openmoko_Mail.mw
+++ b/Openmoko_Mail.mw
@@ -1,3 +1,6 @@
+{{application|Openmoko Mail}}
+[[Image:Openmoko mail.png|thumb]]
+
 Openmoko Mail is a mail client software, based on [http://tinymail.org libtinymail].
 
 == Overview ==
@@ -7,12 +10,12 @@ simple configuration (Adding/Editing account info) interface. Multiple e-mail ac
 
 == GSOC 2008 ==
 
-By the end of GSOC 2008 it is expected to support also :
--Attachment choose by file chooser (similar to [[Media Player]]'s) <br>
--Choosing email from contact's book. <br>
--GPG signing and encrypting of the mails. <br>
--Displaying HTML messages. <br>
--SMS messages managment. <br>
+By the end of [[GSoC 2008]] it is expected to support also :
+* Attachment choose by file chooser (similar to [[Media Player]]'s) <br>
+* Choosing email from contact's book. <br>
+* GPG signing and encrypting of the mails. <br>
+* Displaying HTML messages. <br>
+* SMS messages managment. <br>
 
 
 == Getting the code and support ==
