*Empty MediaWiki Message*

--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -29,6 +29,9 @@ Gestures is a daemon that interpret the accelerometers and the movements you mak
 '''[[Mokopedia]]'''<br>
 Special compressed version of Wikipedia stored in your SD storage card.   Access to wikipedia wherever you are!
 
+'''[[Openmoko Mail]]'''<br>
+An email client for the [[Om2007.2]] distribution
+
 '''[[Orrery]]'''<br>
 Orrery displays the objects in the night (or day) sky.  It uses the GPS position, if available.
 
