--- a/OpenmokoFramework.mw
+++ b/OpenmokoFramework.mw
@@ -154,7 +154,7 @@ The phone subsystem can be used to create and manage voices communications. It m
 * Event: 30%
 * [http://www.freesmartphone.org/index.php/Implementations/OpenPreferencesDaemon Preferences]: 50%
 * Context: 0%
-* Telephony: 80%
+* [[Roadmap/Telephony|Telephony]]: 80%
 * Networking: 0%
 * PIM: 0%
 
