--- a/Om_2008_keyboard.mw
+++ b/Om_2008_keyboard.mw
@@ -38,7 +38,7 @@ If you hover your finger (or stylus) over a letter for more than 2 seconds a mag
 Most applications should bring up the keyboard automatically when keyboard input is required, however, advanced users can activate a small 'qwerty' button which can manually toggle the keyboard on and off.  See the [[Keyboard_Toggle|keyboard toggle tutorial]] for more information.
 
 == Using the Full Qwerty keyboard ==
-If you prefer a full qerty keyboard you have to do some steps:
+If you prefer a full qwerty keyboard you have to do some steps:
 * backup /usr/lib/enlightenment/modules/illume/keyboards/Default.kbd and /usr/lib/enlightenment/modules/illume/keyboards/Full-QWERTY.kbd
 * opkg install http://buildhost.openmoko.org/daily-feed/armv4t/libdbus-1-3_1.2.1-r3_armv4t.ipk
 * opkg install http://buildhost.openmoko.org/daily-feed/armv4t/illume_0.0+svnr217-r12_armv4t.ipk
