*Empty MediaWiki Message*

--- a/Qtopia_on_FreeRunner%2Fit.mw
+++ b/Qtopia_on_FreeRunner%2Fit.mw
@@ -1,15 +1,15 @@
 {{Languages|Qtopia_on_FreeRunner}}
 
-Questa pagina fornisce le istruzioni per installare Qtopia (la versione standard, non le varianti della [[ASU]] o della [[QtopiaOnX11]]) sul telefono GTA02 (Freerunner). E' simile alla pagina [[Qtopia on Neo1973]].
+Questa pagina fornisce le istruzioni per installare Qtopia (la versione standard, non le varianti della [[ASU]] o della [[QtopiaOnX11]]) sul telefono GTA02 (Freerunner). È simile alla pagina [[Qtopia on Neo1973]].
 
 {|align=right
 |__TOC__
 |}
 
 == Stato corrente ==
-L'8 Agosto2008 Qtopia ha rilasciato [http://www.qtopia.net/modules/mydownloads/singlefile.php?lid=77 l'ultima immagine flash per il Neo Freerunner della FIC (gta02)] contentente losnapshot di Qtopia 4.3.2 (Versione: 4.3.2-080808) dell'8 Agosto 2008 (versione GPL). 
+L'8 Agosto 2008 Qtopia ha rilasciato [http://www.qtopia.net/modules/mydownloads/singlefile.php?lid=77 l'ultima immagine flash per il Neo Freerunner della FIC (gta02)] contentente losnapshot di Qtopia 4.3.2 (Versione: 4.3.2-080808) dell'8 Agosto 2008 (versione GPL). 
 
-Questa immagine può realmente fare e ricevere chiamate e messaggi di testo. Riesce a leggere tutti i contatti dalla scheda SIM (cosa che l'aggiornamento della 2007.2 sembra non sia in grado di fare). Contiene applicazioni che sembrano più stabilidi quelle che si trovano sill'immagine della 2007.2. Fornisce diversi metodi per l'inserimento dei caratteri che sembrano più maturi. Non ha, comunque, un browser Web, né alcuna applicazione per il GPS.
+Questa immagine può realmente fare e ricevere chiamate e messaggi di testo. Riesce a leggere tutti i contatti dalla scheda SIM (cosa che l'aggiornamento della 2007.2 sembra non sia in grado di fare). Contiene applicazioni che sembrano più stabili di quelle che si trovano sull'immagine della 2007.2. Fornisce diversi metodi per l'inserimento dei caratteri che sembrano più maturi. Non ha, comunque, un browser Web, né alcuna applicazione per il GPS.
 
 Puoi trovare tutte le immagini di Qtopia [http://www.qtopia.net/modules/mydownloads/viewcat.php?cid=6 qui].
 
@@ -21,7 +21,6 @@ Requisiti d'istallazione:
 
 # Accesso tramite shell SSH all'immagine 2007.2 del Freerunner tramite interfaccia USB o WLAN.
 # Una distribuzione anche desktop Linux (per scompattare l'immagine .jffs2, è funzionato anche usando una Ubuntu  virtualizzata con VMWare)
-
 
 === Preparare la scheda SD ===
 Controlla la [[Booting from SD#Prepare the SD card| Preparing the SD Card]] sezione della pagina [[Booting from SD]] per le istruzioni sul partizionamento e la formattazione. Dopo che avrai completato i passi per la "Formattazione della scheda SD", ritorna qui ed esegui i seguenti comandi:
