Minor grammatical/typographical edits.

--- a/OpenmokoFramework.mw
+++ b/OpenmokoFramework.mw
@@ -2,7 +2,7 @@
 {{FSO}}
 {{Distributions|FSO}}
 
-FSO is an abbreviation for FreeSmartphone.Org. With FSO Openmoko is trying to make some stable back end software. This distribution will be merged with the 2008.8 distribution (or it's successor) when the system is stable enough. For more information see http://www.freesmartphone.org and http://trac.freesmartphone.org
+FSO is an abbreviation for FreeSmartphone.Org. With FSO, Openmoko is trying to make some stable back-end software. This distribution will be merged with the 2008.8 distribution (or its successor) when the system is stable enough. For more information see http://www.freesmartphone.org and http://trac.freesmartphone.org .
 
 =Q/A=
 * ''Question'': Is this an Openmoko-only thing?
@@ -10,9 +10,9 @@ FSO is an abbreviation for FreeSmartphone.Org. With FSO Openmoko is trying to ma
 * ''Question'': Is this a part of the current images yet? Is it perhaps the mystic ASU?
 * ''Answer'': No.
 * ''Question'': When can I see this as part of an image?
-* ''Answer'': Not before winter '08.
+* ''Answer'': Not before winter 2008.
 * ''Question'': What's the current status?
-* ''Answer'': See right below or hop over to http://trac.freesmartphone.org
+* ''Answer'': See right below or hop over to http://trac.freesmartphone.org .
 ** [[OpenmokoFramework/Status Update 1|Status Update 1]]
 ** [[OpenmokoFramework/Status Update 2|Status Update 2]]
 ** [[OpenmokoFramework/Status Update 3|Status Update 3]]
@@ -20,9 +20,9 @@ FSO is an abbreviation for FreeSmartphone.Org. With FSO Openmoko is trying to ma
 * ''Answer'': [[FSO UI Tutorial]]
 
 = Timeline=
-* august/september: [http://n2.nabble.com/FSO-milestone-2-Zhone-sending-digit-tp740432p740546.html milestone 3]
-* 01/07/2008: [[OpenmokoFramework/Status Update 3|milestone 2]]  archieved
-* 01/06/2008: [[OpenmokoFramework/Status Update 2|milestone 1]]  archieved
+* August/September: [http://n2.nabble.com/FSO-milestone-2-Zhone-sending-digit-tp740432p740546.html milestone 3]
+* 01/07/2008: [[OpenmokoFramework/Status Update 3|milestone 2]]  achieved
+* 01/06/2008: [[OpenmokoFramework/Status Update 2|milestone 1]]  achieved
 
 =Purposes=
 * Give people the infrastructure to create solid and exciting software products based on the Openmoko platform
@@ -37,12 +37,12 @@ FSO is an abbreviation for FreeSmartphone.Org. With FSO Openmoko is trying to ma
 * Try to reuse existing technologies as much as possible, but not at the cost of a bad API
 
 =How to achieve that technically=
-* Choose [[Dbus]] as the collaboration line. Below dbus, we can work together. Above dbus, we can differentiate.
-* Expose features through dbus APIs implemented by UI-agnostic and language-agnostic services (daemons).
-* Optimize for Openmoko devices, but support multiple architectures and purposes through plugin interfaces and suitable hardware abstraction mechanisms.
-* Be not afraid of reinventing the wheel for a wheel-barrow if all the existing wheels are made for sports cars.
+* Choose [[Dbus|dbus]] as the collaboration line. Below dbus, we can work together. Above dbus, we can differentiate
+* Expose features through dbus APIs implemented by UI-agnostic and language-agnostic services (daemons)
+* Optimize for Openmoko devices, but support multiple architectures and purposes through plugin interfaces and suitable hardware abstraction mechanisms
+* By not being afraid of reinventing the wheel for a wheelbarrow if all the existing wheels are made for sports cars
 
-=Mandatory Readings=
+=Mandatory Reading=
 * [http://adam.gomaa.us/blog/frameworks-exist-for-conceptual-integrity/ Frameworks exist for conceptual integrity]
 * [http://humanized.com/weblog/2007/10/05/make_oss_humane/ Ten ways to make more humane open source software]
 * [http://www.freesmartphone.org FreeSmartPhone.org Wiki]
@@ -60,7 +60,7 @@ This initiative does not cover high level services such as
 
 =Software Components=
 
-We differenciate between low-level and high-level services -- dbus will be used to communicate horizontally and vertically.
+We differentiate between low-level and high-level services -- dbus will be used to communicate horizontally and vertically.
 
 ===Low-Level Services===
 
@@ -68,18 +68,18 @@ We differenciate between low-level and high-level services -- dbus will be used 
 The low level device control service manages peripheral control, i.e. controlling power for individual subsystems such as
 * GSM, WiFi, Bluetooth, GPS, as well as
 * Backlight brightness and power,
-* turning LEDs on and off, etc.
+* Turning LEDs on and off, etc.
 It also deals with
-* charging, suspend/resume,
-* accellerometers, and buttons.
+* Charging, suspend/resume,
+* Accelerometers, and buttons.
 Last but not least, it sends notifications about the user's activity so that listeners have a chance to
-* change to powersaving modes, or
-* lock the device.
+* Change to powersaving modes, or
+* Lock the device.
 We implement the following software for that:
 * [http://www.freesmartphone.org/index.php/Implementations/OpenDeviceDaemon odeviced]
 
 ====Audio====
-The low level audio service relies on a working alsa device driver. On top of that, there are two components:
+The low level audio service relies on a working ALSA device driver. On top of that, there are two components:
 # [http://gstreamer.freedesktop.org/ gstreamer]
 # [http://pulseaudio.org pulseaudio]
 
@@ -89,9 +89,9 @@ The low level audio service relies on a working alsa device driver. On top of th
 
 On further reflection, it seems Pulseaudio will not be used as it currently doesn't provide good performance on this hardware.  Alsa/dmix will be used instead. [http://lists.openmoko.org/pipermail/devel/2008-July/000253.html]
 ====GSM====
-The low level GSM services expect a modem complying to GSM 07.07, GSM 07.05, and assorted GSM specifications, talking an AT-protocol over a serial line. If GSM 07.10 is supported, we use the multiplexing daemon
+The low level GSM services expect a modem complying to GSM 07.07, GSM 07.05, and assorted GSM specifications, talking an AT-protocol over a serial line. If GSM 07.10 is supported, we use the multiplexing daemon...
 * [http://www.freesmartphone.org/index.php/Implementations/gsm0710muxd gsm0710muxd]
-to export virtual serial lines over -- again -- AT-protocol can be spoken.
+...to export virtual serial lines over -- again -- AT-protocol can be spoken.
 
 ====Bluetooth====
 The low level Bluetooth services rely on the official Linux Bluetooth subsystem:
@@ -104,23 +104,23 @@ The low level GPS services assume a GPS device that talks NMEA over a device nod
 ====Network====
 The low level networking service assumes network interfaces, such as USB, Ethernet, Wifi, etc. We rely on the following software here:
 * Network Manager or Intel Connection Manager (undecided yet)
-* ppp
+* PPP
 
 ===High Level===
 
 ====Usage====
-The Usage subsystem is coordinating application I/O requirements preventing. Applications are not supposed to turn on or off devices, since they do not have any knowledge about concurrent applications that may be also using the device -- think ''reference counting'' for I/O requirements.
+The Usage subsystem is concerned with coordinating application I/O requirements. Applications are not supposed to turn on or off devices, since they do not have any knowledge about concurrent applications that may be also using the device -- think ''reference counting'' for I/O requirements.
 
 With this added layer, we could later think about monitoring subsystems, subsystem usage statistics, or accounting.
 
 See discussion page about PolicyKit.
 
 ====Events====
-* signaling events via I/O (ringing, blinking, vibrating)
-* might use fd.o notification API
+* Signalling events via I/O (ringing, blinking, vibrating)
+* Might use fd.o notification API
 
 ====PIM====
-An intelligent storage database server. This is being carried out as a Google Summer of Code project. See complete description [http://www.neo1973-germany.de/wiki/pyPimd here]
+An intelligent storage database server. This is being carried out as a Google Summer of Code project. See complete description [http://www.neo1973-germany.de/wiki/pyPimd here].
 
 ====Context====
 * Intelligent context API, integrating location as one -- among other -- sources
@@ -131,18 +131,18 @@ Reference Geoclue
 The phone subsystem can be used to create and manage voices communications. It makes abstraction of the protocol used.
 
 === [http://www.freesmartphone.org/index.php/Implementations/OpenPreferencesDaemon Preferences] ===
-* settings database
+* Settings database
 
 ====Network====
-* high level networking queries
+* High-level networking queries
 
 =Implementation=
 
 ===Completion Status===
 
-====Low Level====
-* device control: 50%
-* audio: 80%
+====Low-Level====
+* Device control: 50%
+* Audio: 80%
 * GSM: 90%
 * GPRS: 90%
 * Bluetooth: 80%
@@ -165,7 +165,7 @@ The phone subsystem can be used to create and manage voices communications. It m
 
 =The role of Python=
 
-Where we write new code, we will use Python to implement the dbus services. The reason for that being the rapid prototyping nature of Python and the emphasis on the Dbus APIs. Using Python, the turnaround times to experiment with APIs are incredibly faster than for using a compiled language such as C or C++.
+Where we write new code, we will use Python to implement the dbus services. The reason for that being the rapid prototyping nature of Python and the emphasis on the [[Dbus|dbus]] APIs. Using Python, the turnaround times to experiment with APIs are incredibly faster than for using a compiled language such as C or C++.
 
 Once the APIs have been used by application programmers, we can start profiling and possibly reimplement some of the services with daemons written in Vala, ''if'' necessary. We might as well succeed in improving performance by using Pyrex/Cython/Ctypes to keep the benefits of Python.
 
