/* Booting into Qtopia */ NOR ---> NAND

--- a/Qtopia_%2F_Qt_Extended_on_FreeRunner.mw
+++ b/Qtopia_%2F_Qt_Extended_on_FreeRunner.mw
@@ -109,7 +109,7 @@ Now shutdown the FreeRunner
 
   shutdown -h now
 
-Log into U-Boot in the NOR Flash to boot from the MicroSD card: (instructions from [[Booting the Neo FreeRunner]])
+Log into U-Boot in the NAND Flash to boot from the MicroSD card: (instructions from [[Booting the Neo FreeRunner]])
 
 * Press and hold Power button
 * Then while still pressing the Power button, press and hold AUX button for 5 to 8 seconds. 
