--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -1,7 +1,7 @@
 {{Applications}}
 
 == Overview ==
-This page is intended for ordinary end users of Openmoko smartphones.   It lists some of the cool applications provided by the Openmoko community that you can install and enjoy.   Freedom to share!    You can find many more applications here - http://projects.openmoko.org 
+This page is intended for ordinary end-users of Openmoko smartphones.   It lists some of the cool applications provided by the Openmoko community that you can install and enjoy.   Freedom to share!    You can find many more applications here - http://projects.openmoko.org 
 
 '''Please note that not all of these applications are in a finished format yet.   When they are complete you will be able to download them via a menu on the phone.    At the moment, following a recipe of commands in the console window may be needed to install.   This will of course improve with time :-) '''
 
@@ -13,36 +13,36 @@ Any problems with the software below should be reported to the individual softwa
 
 === Browsers ===
 '''[[Minimo]]'''<br>
-Minimo is a Mozilla based web browser. It features full AJAX support and other goodies. It is listed as an alternative to standard Webkit based browser. 
+Minimo is a Mozilla based web browser. It features full AJAX support and other goodies. It is listed as an alternative to the standard Webkit based browser.
 
 === Bluetooth ===
 '''[[ReMoko]]'''<br>
-This applications connects through bluetooth and turns your FreeRunner into a Presentation remote control, a Multimedia remote control, a mouse for another computer and many more.
+This applications connects through Bluetooth and turns your FreeRunner into a remote control for presentations, a multimedia (or media player) remote control, a mouse for another computer and much more.
 
 === GPS ===
 {{main|GPS applications}}
 
 === Other ===
 '''[[Gestures]]<br>
-Gestures is a daemon that interpret the accelerometers and the movements you make with your FreeRunner. It's also switch between portrait/landscape if it notice your FreeRunner is moved sideways.
+Gestures is a daemon that interpret measurements from the accelerometers and the movements you make with your FreeRunner. It also switches between portrait and landscape if it notices that your FreeRunner has been rotated.
 
 '''[[Mokopedia]]'''<br>
-Special compressed version of Wikipedia stored in your SD storage card.   Access to wikipedia wherever you are!
+Special compressed version of Wikipedia stored in your SD storage card.   Access to Wikipedia wherever you are!
 
 '''[[Openmoko Mail]]'''<br>
-An email client for the [[Om2007.2]] distribution
+An e-mail client for the [[Om2007.2]] distribution.
 
 '''[[Orrery]]'''<br>
 Orrery displays the objects in the night (or day) sky.  It uses the GPS position, if available.
 
 === System Software ===
-This is software that mostly hasn't any GUI. This software is usually used by other programs.
+This is software that mostly has no GUI. This software is usually used by other programs.
 
 '''[[Rotate]]'''<br>
-This program just rotates the screen according to the position of the Neo FreeRunner. It's just on c file, but it works very well. 
+This program just rotates the screen according to the position of the Neo FreeRunner. It's just one C file, but it works very well. 
 
 '''[[Thumbtribes]]'''<br>
-Low bandwidth distance calculation daemon
+Low bandwidth distance calculation daemon.
 
 [[Category:Applications]]
 [[Category:Openmoko]]
