--- a/Download.mw
+++ b/Download.mw
@@ -31,6 +31,7 @@ There are *NO* updates available for 2008.08 anywhere on buildhost.openmoko.org 
 There are no builds yet
 
 ==== Unofficial builds by zecke ====
+[http://wiki.openmoko.org/wiki/Om_2008.8_Guide#Unofficial_.28zecke.29_Updates howto]
 <pre>
 development/unstable trees:
 	http://people.openmoko.org/~zecke/om2008.8-dev/all
