--- a/Press_Coverage.mw
+++ b/Press_Coverage.mw
@@ -15,6 +15,7 @@ This site contains the press coverage about Openmoko and the Neo 1973 sorted by 
 
 ==== August 2008 ====
 
+* Slashdot [http://mobile.slashdot.org/article.pl?sid=08/08/24/1739200 Canadian Firms Get Behind OpenMoko/FreeRunner]
 * BetaNews [http://www.betanews.com/article/Openmoko_to_publish_open_phone_recipes_after_dealing_with_NDAs/1218225833 Openmoko to publish 'open' phone recipes, after dealing with NDAs]
 * The Register [http://www.theregister.co.uk/2008/08/07/openmoko_opens_schematics/ Openmoko to reveal Linux phone's inner workings]
 * BusinessWire [http://www.smartbrief.com/news/cea/industryBW-detail.jsp?id=892DE460-3982-4B33-80D1-04B1D075BC1C Openmoko Declares Another Freedom: Publishes Schematics for Neo Phones]
