--- a/Qtopia_on_FreeRunner%2Fit.mw
+++ b/Qtopia_on_FreeRunner%2Fit.mw
@@ -45,11 +45,11 @@ Dovresti trovarti con due files:
 Ora estrai il root filesystem dal file jffs2 usando il comando che trovi [[Userspace root image#Mounting the JFFS2 image on a loop back device (Block Memory MTD Emulation) |qui]].
 
   
-Ora scampatta e decomprimi il root filesystem:
+Ora archivia e comprimi il root filesystem:
 
   tar czf qtopia-4.3.2-gta02-rootfs-07172049.tar.gz -C <mountpoint> .
 
-Dove ''<mountpoint>'' è la directory di dove il filesystem jffs2 è stato montato.
+Dove ''<mountpoint>'' è la directory dove il filesystem jffs2 è stato montato.
 
 ==== Installing Root Filesystem ====
 
