/* Estrarre l'immagine del root filesystem di Qtopia */

--- a/Qtopia_on_FreeRunner%2Fit.mw
+++ b/Qtopia_on_FreeRunner%2Fit.mw
@@ -47,7 +47,7 @@ Ora estrai il root filesystem dal file jffs2 usando il comando che trovi [[Users
   
 Ora archivia e comprimi il root filesystem:
 
-  tar czf qtopia-4.3.2-gta02-rootfs-07172049.tar.gz -C <mountpoint> .
+  tar czf qtopia-4.3.2-gta02-rootfs-07172049.tar.gz -C <mountpoint>/*
 
 Dove ''<mountpoint>'' è la directory dove il filesystem jffs2 è stato montato.
 
