/* Unpacking the Qtopia Root Filesystem Image */

--- a/Qtopia_%2F_Qt_Extended_on_FreeRunner.mw
+++ b/Qtopia_%2F_Qt_Extended_on_FreeRunner.mw
@@ -52,7 +52,7 @@ Now, mount the root file system from the jffs2 using the commands found [[Usersp
   
 Next, tar up the root filesystem:
 
-  tar czf qtopia-4.3.2-gta02-rootfs-07172049.tar.gz -C <mountpoint> .
+  tar czf qtopia-4.3.2-gta02-rootfs-07172049.tar.gz -C <mountpoint>/*
 
 Where ''<mountpoint>'' is the location where the jff2 filesystem was mounted.
 
