/* Notes about expected battery life */

--- a/Neo_FreeRunner_Battery.mw
+++ b/Neo_FreeRunner_Battery.mw
@@ -21,6 +21,7 @@ Should the battery become  completely discharged, your options are:
 * Use external stand-alone charger (compatible with the Nokia BL-5C battery) 
 * Boot the FreeRunner with an alternative battery, or with a spare GTA01 or GTA02 battery, plug USB power, then switch to the empty battery. 
 * Boot the FreeRunner with a 4.5VDC external power source (steady hand and great care involved), plug USB power, then insert the empty battery.
+* Charge the battery directly, [http://wiki.openmoko.org/wiki/Charging_battery_directly see here], how I did that.
 
 === Compatible Replacement Batteries ===
 
