/* Estrarre l'immagine del root filesystem di Qtopia */

--- a/Qtopia_on_FreeRunner%2Fit.mw
+++ b/Qtopia_on_FreeRunner%2Fit.mw
@@ -44,10 +44,10 @@ Dovresti trovarti con due files:
 #qtopia-4.3.2-gta02-rootfs-07172049.jffs2  
 Ora estrai il root filesystem dal file jffs2 usando il comando che trovi [[Userspace root image#Mounting the JFFS2 image on a loop back device (Block Memory MTD Emulation) |qui]].
 
-  
+==== Creare un tarball compresso ====
 Ora archivia e comprimi il root filesystem:
 
-  tar czf qtopia-4.3.2-gta02-rootfs-07172049.tar.gz -C <mountpoint>/*
+ # tar czf qtopia-4.3.2-gta02-rootfs-07172049.tar.gz <mountpoint>/*
 
 Dove ''<mountpoint>'' è la directory dove il filesystem jffs2 è stato montato.
 
