--- a/Qtopia_%2F_Qt_Extended_on_FreeRunner.mw
+++ b/Qtopia_%2F_Qt_Extended_on_FreeRunner.mw
@@ -49,10 +49,12 @@ You should now have two files:
 #uImage-2.6.24+git18+9c058ff0d2641df3c36fc3300acb72078d2c41d4-r0-om-gta02.bin
 #qtopia-4.3.2-gta02-rootfs-07172049.jffs2  
 Now, mount the root file system from the jffs2 using the commands found [[Userspace root image#Mounting the JFFS2 image on a loop back device (Block Memory MTD Emulation) |here]].
-  
+
+==== Creating a compressed tarball ====
+
 Next, tar up the root filesystem:
 
-  tar czf qtopia-4.3.2-gta02-rootfs-07172049.tar.gz -C <mountpoint>/*
+ # tar czf qtopia-4.3.2-gta02-rootfs-07172049.tar.gz <mountpoint>/*
 
 Where ''<mountpoint>'' is the location where the jff2 filesystem was mounted.
 
