/* Installing Root Filesystem */

--- a/Qtopia_on_FreeRunner%2Fit.mw
+++ b/Qtopia_on_FreeRunner%2Fit.mw
@@ -51,9 +51,8 @@ Ora archivia e comprimi il root filesystem:
 
 Dove ''<mountpoint>'' è la directory dove il filesystem jffs2 è stato montato.
 
-==== Installing Root Filesystem ====
-
-Transfer this compressed tarball to the second partition of the MicroSD that is mounted on the FreeRunner:
+==== Installare il Filesystem Root ====
+Trasferisci il tarball compressed sulla seconda partizione della MicroSD che è montata sul FreeRunner:
 
   scp qtopia-4.3.2-gta02-rootfs-07172049.tar.gz root@192.168.0.202:/media/mmcblk0p2/
 
