/* Installare il Filesystem Root */

--- a/Qtopia_on_FreeRunner%2Fit.mw
+++ b/Qtopia_on_FreeRunner%2Fit.mw
@@ -56,14 +56,14 @@ Trasferisci il tarball compressed sulla seconda partizione della MicroSD che è 
 
   scp qtopia-4.3.2-gta02-rootfs-07172049.tar.gz root@192.168.0.202:/media/mmcblk0p2/
 
-Log in to your FreeRunner and unpack the root filesystem:
+Loggati sul tuo FreeRunner e spacchetta il filesystem root:
 
   cd /media/mmcblk0p2
   tar xzf qtopia-4.3.2-gta02-rootfs-07172049.tar.gz
   rm qtopia-4.3.2-gta02-rootfs-07172049.tar.gz
   rm -f /media/mmcblk0p2/boot/*
 
-'''''Note:''''' the last step removes the kernel image from the second partition.  For some reason, U-Boot cannot find the uImage.bin file in the first partition if a kernel image exists in the second partition boot/ directory.
+'''''Nota:''''' l'ultimo passaggio rimuove l'immagine del kernel dalla seconda partizione. Per la stessa ragione, U-Boot non può trovare il file uImage.bin nella prima partizione se un'immagine del kernel esiste nella directory boot/ sulla seconda partizione.
 
 ==== Installing Kernel ====
 
