--- a/Qtopia_on_FreeRunner%2Fit.mw
+++ b/Qtopia_on_FreeRunner%2Fit.mw
@@ -65,9 +65,8 @@ Loggati sul tuo FreeRunner e spacchetta il filesystem root:
 
 '''''Nota:''''' l'ultimo passaggio rimuove l'immagine del kernel dalla seconda partizione. Per la stessa ragione, U-Boot non può trovare il file uImage.bin nella prima partizione se un'immagine del kernel esiste nella directory boot/ sulla seconda partizione.
 
-==== Installing Kernel ====
-
-From your Linux box, rename uImage-2.6.24+git18+9c058ff0d2641df3c36fc3300acb72078d2c41d4-r0-om-gta02.bin to uImage.bin and copy it to the boot directory on the first partition of the MicroSD card.  Depending on the version of U-Boot you have installed, this may not work.  To prevent any possible issues, copy it to the /media/card directory as well. There is plenty of room on the first partition to have uImage.bin in both locations.
+==== Installare il Kernel ====
+Dalla tua Linux box rinomina il file <tt>uImage-2.6.24+git18+9c058ff0d2641df3c36fc3300acb72078d2c41d4-r0-om-gta02.bin</tt> come <tt>uImage.bin</tt> e copialo nella directory di boot sulla prima partizione della MicroSD. Dipendendo dalla versione di U-Boot che hai installato, questo potrebbe non funzionare. Per supportare ogni possibile versione, mettine una copia anche nella directory <tt>/media/card</tt>. C'è abbastanza spazio nella prima partizione da permetterci di acere <tt>uImage.bin</tt> in entrambi i posti.
 
   mv uImage-2.6.24+git18+9c058ff0d2641df3c36fc3300acb72078d2c41d4-r0-om-gta02.bin uImage.bin
   scp uImage.bin root@192.168.0.202:/media/card/boot/
