added info about using mdbus to get the info

--- a/Finding_hardware_revision.mw
+++ b/Finding_hardware_revision.mw
@@ -13,6 +13,18 @@ revision: "HW: GTA02BV5, GSM:
 gsm_ac_gp_fd_pu_em_cph_ds_vc_cal35_ri_36_amd8_ts0-Moko8"
 </pre>
 
-If your are running [[OpenmokoFramework|fso]], you can use [[OpenmokoFramework/mickeyterm|mickeyterm]] and the '''at+cgmr''' command.
+If your are running [[OpenmokoFramework|fso]], you can use [[OpenmokoFramework/mickeyterm|mickeyterm]] and the '''at+cgmr''' command. Or you can use [[mdbus]], like this:
+<pre>
+root@om-gta01:~# mdbus -s org.freesmartphone.ogsmd /org/freesmartphone/GSM/Device org.freesmartphone.GSM.Device.GetInfo
+</pre>
+The result will be something like this:
+<pre>
+/org/freesmartphone/GSM/Device: GetInfo ->  dbus.Dictionary({dbus.String(u'imei'): dbus.String(u'nnnnnnnnnnnnnnn',
+ variant_level=1), dbus.String(u'model'): 
+dbus.String(u'Neo1973 GTA01 Embedded GSM Modem', variant_level=1), dbus.String(u'revision'):
+dbus.String(u'HW: GTA01Bv4, GSM: gsm_ac_gp_fd_pu_em_cph_ds_vc_cal35_ri_36_amd8_ts0-Moko1', variant_level=1), 
+dbus.String(u'manufacturer'): dbus.String(u'FIC/OpenMoko', variant_level=1)}, signature=dbus.Signature('sv'))
+</pre>
+Where 'nnnnnnnnnnnnnnn' is you [[IMEI]].
 
 [[Category:Hardware]]
