*Empty MediaWiki Message*

--- a/Finding_hardware_revision.mw
+++ b/Finding_hardware_revision.mw
@@ -13,7 +13,7 @@ revision: "HW: GTA02BV5, GSM:
 gsm_ac_gp_fd_pu_em_cph_ds_vc_cal35_ri_36_amd8_ts0-Moko8"
 </pre>
 
-If your are running [[OpenmokoFramework|fso]], you can use [[OpenmokoFramework/mickeyterm|mickeyterm]] and the '''at+cgmr''' command. Or you can use [[mdbus]], like this:
+If your are running [[OpenmokoFramework|fso]], you can use [[OpenmokoFramework/mickeyterm|mickeyterm]] and the '''at+cgmr''' command. Or you can use [[OpenmokoFramework/mdbus|mdbus]], like this:
 <pre>
 root@om-gta01:~# mdbus -s org.freesmartphone.ogsmd /org/freesmartphone/GSM/Device org.freesmartphone.GSM.Device.GetInfo
 </pre>
