--- a/Manually_using_GPRS.mw
+++ b/Manually_using_GPRS.mw
@@ -263,7 +263,7 @@ fido
 |-
 | Germany || E-Plus || BASE (and others?) || internet.eplus.de || eplus gprs || [[Base pppd scripts]]
 |-
-| Germany || E-Plus || Simyo || internet.eplus.de || || [[simyo pppd scripts]]
+| Germany || E-Plus || Simyo || internet.eplus.de || simyo simyo || [[simyo pppd scripts]]
 |-
 | Germany || T-Mobile ||  || internet.t-mobile || ||
 |-
