--- a/Gutenflash.mw
+++ b/Gutenflash.mw
@@ -15,12 +15,23 @@ GutenFlash expects UTF-8 files. So for reading a file originally in iso-8859-1, 
 
 == Download ==
 
-DeadLink: Current mokoified version (ipk package):
-http://oralux.net/gutenflash/
+Current mokoified version (ipk package and bitbake recipe):
+http://soft.oralux.net/gutenflash/
 
 Original website: http://toykeeper.net/programs/flash/
 
-Make ipk:
+== Notes ==
+=== NameError: name 'init' is not defined===
+You may want to update the pygtk __init__.py file as suggested in [http://docs.openmoko.org/trac/ticket/1718 #1718]
+
+=== Preferences ===
+Create your .gutenflash.conf file:
+ 
+ gutenflash --showcfg > ~/.gutenflash.conf
+
+and edit it.
+
+== Toolchain: Make ipk ==
  *download snapshot from http://toykeeper.net/programs/flash/files/
  *cd to ipk-folder
  *make
