*Empty MediaWiki Message*

--- a/Gutenflash.mw
+++ b/Gutenflash.mw
@@ -8,19 +8,12 @@ Current features:
 * total / remaining playtime calculation
 * 3 display modes
 
-== Note ==
+== Notes ==
 
+=== UTF-8 === 
 GutenFlash expects UTF-8 files. So for reading a file originally in iso-8859-1, please convert it before to UTF-8 in a shell terminal:
  iconv -f iso-8859-1 Reveries.txt -t utf-8 > Reveries.utf8
 
-== Download ==
-
-Current mokoified version (ipk package and bitbake recipe):
-http://soft.oralux.net/gutenflash/
-
-Original website: http://toykeeper.net/programs/flash/
-
-== Notes ==
 === NameError: name 'init' is not defined===
 You may want to update the pygtk __init__.py file as suggested in [http://docs.openmoko.org/trac/ticket/1718 #1718]
 
@@ -30,6 +23,13 @@ Create your .gutenflash.conf file:
  gutenflash --showcfg > ~/.gutenflash.conf
 
 and edit it.
+
+== Download ==
+
+Current mokoified version (ipk package and bitbake recipe):
+http://soft.oralux.net/gutenflash/
+
+Original website: http://toykeeper.net/programs/flash/
 
 == Toolchain: Make ipk ==
  *download snapshot from http://toykeeper.net/programs/flash/files/
